<resources>
    <string name="app_name">Enki\'s Arc Witch 3.11</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Enki\'s Arc Witch for 3.11</string>
    <string name="nav_header_subtitle">A beginner, SSF-friendly Lightning Caster</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="button_start">START</string>
    <string name="menu_videos">Videos</string>
    <string name="menu_pob">Path of Building</string>
    <string name="menu_about">About this Build</string>
    <string name="menu_leveling">Leveling this Build</string>
    <string name="menu_passive">Passive Tree, Ascendancy</string>
    <string name="menu_gem">Gem Setup</string>
    <string name="menu_gear">Gear, Jewels, Flasks</string>
    <string name="menu_mapping">Mapping, Bossfights</string>
    <string name="settings_menu1">Text settings</string>
    <string name="text_size">Text size</string>
    <string name="toast_back">Click BACK again to exit</string>
    <string name="settings_setup">Chose your text size here</string>
    <string name="search">Search</string>
    <string name="text_video"> <a href="https://www.youtube.com/watch?v=Qfoogi5j4IM">Elder</a> \n\n <a href="https://www.youtube.com/watch?v=uml3Fr5cEro">Shaper</a> \n\n <a href="https://www.youtube.com/watch?v=81_gQ-4ZZ6c">Uber Elder</a> \n\n <a href="https://www.youtube.com/watch?v=lwcSiBrRaQE">Juiced T16 Toxic Sewer</a> \n\n <i>Will eventually record more when I have time!</i> </string>
    <string name="text_video1">I\'m also going to start in Harvest SSFHC with this build live at <a href="https://www.twitch.tv/enki91">twitch.tv/enki91</a></string>
    <string name="text_PB">Path of Building link and Browser Version\n<a href="https://pastebin.com/r3EEZjCa"><b>Link to Build</b></a> (<b><i>read the Notes after importing!</i></b>)\n<a href="https://pob.party/">Browser Version</a>\n<b><i>I know that some people jump straight to the PoB without ever reading the guide, which often leads to failure and is then blamed on the build. Don\'t be that person!</i></b>\nI\'ve invested lots of time into this guide and find it very rude when people just disregard that
and ask about things that are already well explained. This unfortunately keeps happening.</string>
    <string name="text_PBD">Path of Building is a tool that lets you fully plan characters from scratch, check out other peoples setups or import your own character to check DPS and defenses or compare potential upgrades.\n<a href="https://github.com/PathOfBuildingCommunity/PathOfBuilding/releases">Path of Building Community Fork</a> (<b><i>required for the POB above</i></b>)\n<a href="https://imgur.com/OeTuAhL">How to import builds</a></string>
<string name="text_pros"><font color='green'>+ smooth gameplay and progression\n+ cheap and fully SSF-capable\n+ can get really tanky\n+ capable to do all bossfights</font>\n<font color='red'>- boss DPS is a bit lacking\n- can\'t run all mapmods</font></string>
    <string name="text_mech"><big><b>‣ Chaining:</b></big> Arc is a lightning-based spell with the ability to chain from monsters and destroyable objects, even around corners and out of your line of sight! Each time it chains, it will also split to
a second nearby enemy from where it can\'t chain further. The amount of times Arc can chain depends on its gem level and can be increased by enchantments.
        \n\n‣ <big><b>Mana:</b></big> By default, mana is used to cover skill costs and -reservation. This build however couples heavy mana investment with several gems and keystones for various offensive and defensive purposes. Mind over Matter redirects 30% of the damage we take to our life to mana instead while the Agnostic spends mana to heal our life back to full, the gems will be covered later in the guide. This makes our mana investment very efficient and augments the value of the base 6 mana we gain per level, but it also creates a high demand for sustain beyond the base 1.8% of mana being regenerated per second which we mostly cover through our ascendancy, flasks and passives.
        \n\n‣ <big><b>Block:</b></big> Another defensive layer which comes in two ways, Chance to Block Attacks and Chance to Block Spells, each with a base cap of 75%. Blocking hits prevents all damage and status effects except for stun, however non-hitbased damage over time can\'t be blocked. While we won\'t reach the block cap, it\'s still enough damage prevention coupled with some ways to heal us on block.
        \n\n‣ <big><b>Elemental Overload:</b></big> This keystone provides a 40% more damage multiplier in exchange for removing all critical strike multiplier, with the condition to crit atleast once within 8 seconds. While the damage potential is lower compared to scaling crits, the damage is also way more consistent and only takes small investment, which allows us to invest more heavily into mana.
        \n\n‣ <big><b>Spiritual Aid:</b></big> A notable that applies all stats with the wording \"Minions deal #% increased Damage\" and \"Minions deal #% reduced Damage\" to our damage. This gives some more liberties while gearing and makes said stat from our ascendancy not go to waste. Note that minion damage stats with different wording, such as \"Golems deal #% increased Damage\", \"Minions deal #% more Damage\" or \"Minions deal # to # additional Lightning Damage\" won\'t apply to us!</string>
<string name="text_thanks"><i>This guide and build was developed and provided by <a href="https://www.pathofexile.com/account/view-profile/Enki91">Enki91</a> and you can find it in the original on the Path of Exile website <a href="https://www.pathofexile.com/forum/view-thread/1147951">here</a>.</i>\n\n 
    <big>Welcome to my Arc guide!</big>\n\n

With this guide I want to provide a simple and balanced caster build for beginners and veterans
that is fun and easy to play, scales well into endgame and has as few restrictions as possible.
It\'s not the strongest caster build out there, but it perfectly fits the niche I want it to be in.\n\n

Instead of just showcasing a build, this guide is made to be a comprehensive learning experience.
There\'s many indepth explanations and links to various wiki pages for new players to understand.
I\'ve tried to keep it short, but some things just can\'t be explained properly with only a few words.\n\n

If you have any questions, please ask them in this <a href="https://www.pathofexile.com/forum/view-thread/1147951">thread</a> or my <a href="https://www.twitch.tv/enki91">stream!</a>\n\n
    Art on front page done by <a href="https://twitter.com/SK_Gunoo">sk_gunoo</a>.\n\n
    <i>A few words from the creator of this application. First of all, thanks a lot to Enki for this build and permission to use it here. I\'m a fan of POE and I really liked this build, I\'m new to Android development, but nevertheless decided to put this build to the masses in Google Play.\n I will keep up-to-date information here and update functions in the future. I ask you not to judge strictly, and in case of errors or your wishes to the functional, write to me <a href="https://www.pathofexile.com/account/view-profile/Headshot_Inc">directly</a>!\n
    I hope you enjoy this build as much as I do and you will find the benefit of this application for yourself. Feel free to comment and rate this apllication on Google Play</i>   
    </string>
    <string name="text_lvl1">Here\'s a small collection of generic advice for newer players:\n\n
<big><b>‣ Information:</b></big> Knowledge is a strong skill in Path of Exile, and it helps to know where to find it. First there\'s the ingame Help Panel, which you can reach through its icon next to your skillbar.
The Path of Exile Wiki should be your first stop for further information, poedb for plain data.
Lastly, Engineering Eternity has a youtube channel with lots of informative videos.\n\n

<big><b>‣ Lootfilter:</b></big> You will soon realize that there\'s lots of redundant loot in this game, a good Lootfilter reduces screen clutter and highlights potentially valuable or important drops. Neversink\'s Filter is always a good start and you can further customize it at Filterblade.\n\n

<big><b>‣ Flasks:</b></big> Unlike most ARPG\'s, this game is directly balanced around using all your flasks.
This goes beyond the typical life and mana flasks that you\'re probably used to from other games, during your act progression you\'ll gain access to various utility flasks which grant powerful buffs. Flasks can also be crafted, but it\'s not needed until maps so i\'ve kept it for their own flask section. For now, focus on keeping your life and mana flasks updated, get all utility flasks from quests when mentioned and try to get a feeling for your flask usage.\n\n

<big><b>‣ Crafting:</b></big> Gear can be enhanced in various ways through crafting and recipes, while the latter can also create currency used for crafting. You outlevel gear pretty quickly during act progression, so it\'s not advised to invest too much at this point. Limit it to Orbs of Transmutation, Orbs of Augmentation, Orbs of Alteration, Chromatic Orbs and various Essences you can find for now,
use Jeweller\'s Orbs and Orbs of Fusing only on useful gear you\'ve looted. Try to focus on intelligence-based gear for an easier time to get the right colors.\n\n

<big><b>‣ Crafting Bench:</b></big> After unlocking your first hideout, you\'ll gain access to the Crafting Bench.
This can be used to craft a targeted affix on gear, if it isn\'t already there and has a slot available. Use it to craft any damage affixes, Life, Attributes or Elemental Resistances missing on your gear.
Recipes need to be found first, the Crafting Bench tells you all undiscovered recipe locations.\n\n

<big><b>‣ Trading:</b></big> You can freely trade with other players if you have a Lv25+ char and aren\'t in SSF. Path of Exile\'s own trading site is good for buying gear, poemap is convenient for bulk map trades. If you want to sell something, you either need premium stash tabs, set up a shop in the trade subforums or use Acquisition. For pricechecks, look for similar stuff on the trade site, check poe.ninja or use Awakened POE Trade.\n\n

<big><b>‣ Stash Tabs:</b></big> The default stash space is pretty limited, if you like the game and are able to, consider buying more stash tabs. Getting a Currency- and Map Tab is highly recommended, Premium Tabs make trading easier and if you want, a Quad Tab makes a good dump tab.
Purchased tabs are account-wide, you won\'t lose them when temporary leagues end.
There\'s also a stash tab sale weekend each month, wait for that if you\'re not in a rush.</string>
</resources>